Update style.css fix hero spacing

--- a/allonfour/app/sass/layout/section/hero.scss
+++ b/allonfour/app/sass/layout/section/hero.scss
@@ -1,7 +1,7 @@
 
 
 .hero-section{
-	padding-top:100px;
+	padding-top:120px;
 	font-family:$font-dm-sans;
 
 	@include media("<desktop"){
