--- a/allonfour/assets/css/style.css
+++ b/allonfour/assets/css/style.css
@@ -3090,7 +3090,7 @@ button.secondary:hover,
 }
 
 .hero-section {
-  padding-top: 100px;
+  padding-top: 120px;
   font-family: "DM Sans", sans-serif;
 }
 @media (max-width: 991px) {
